--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
     "lodash": "^4.17.21",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
