--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.4.0",
+    "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
